Fixed the pop up overlay and #pop up to make it stay in the center in all cases and when scrolling. Updated background for better visibility

--- a/style/aboutPage/team.css
+++ b/style/aboutPage/team.css
@@ -290,29 +290,28 @@
 /* Pop up styles */
 #overlay {
   display: none;
-  position: absolute;
+  position: fixed;
   top: 0;
-  bottom: 0;
-  background: #999;
+  left: 0;
   width: 100%;
   height: 100%;
-  opacity: 0.8;
+  background: rgba(0, 0, 0, 0.5);
   z-index: 100;
-  left: 0;
 }
 
 #popup {
   display: none;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
+  transform: translate(-50%, -50%);
   background: #fff;
   width: 500px;
   height: 300px;
-  margin-left: -250px; /*Half the value of width to center div*/
-  margin-top: -250px; /*Half the value of height to center div*/
   z-index: 200;
   border-radius: 30px;
+  padding: 20px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
 }
 
 #popupclose {
